--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.8</version> <!-- Use the appropriate version -->
+    </dependency>
         <!-- Gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
